# iris-bank-demo

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  coq-iris-bank-demo.opam
.github/workflows/: build.yml
src/: bank.v
