opam-version: "2.0"
name: "coq-iris-bank-demo"
maintainer: "Tej Chajed <tchajed@mit.edu>"
authors: "Tej Chajed <tchajed@mit.edu>"
license: "MIT"
homepage: "https://github.com/tchajed/iris-bank-demo"
bug-reports: "https://github.com/tchajed/iris-bank-demo/issues"
dev-repo: "git+https://github.com/tchajed/iris-bank-demo.git"

synopsis: "Demo of using Iris for a toy bank example"
description: """
Proof that a simple bank-like program maintains a constant sum of balances.
"""

depends: [
  "coq" {>= "8.11"}
  "coq-iris" {>= "dev.2020-04-07.0.86b62616" | (>= "3.2.0" & < "4.0") | = "dev"}
]

build: [make "-j%{jobs}%"]
install: [make "install"]

tags: [
  "category:Miscellaneous"
  "keyword:iris"
  "logpath:Bank"
]
